# react_with_scratchpad

./: .gitignore  README.md  pyproject.toml
react_with_scratchpad/: main.py  output_parser.py  prompt.py  search.py
scripts/: run.sh  test.sh
src/react_with_scratchpad/: llm.py  react_runner.py
tests/: output_parser_test.py
